fix: task/book-list-wrap 补明确高度，修复渐变位置和宽下巴

--- a/miniprogram/src/pages/books/index.scss
+++ b/miniprogram/src/pages/books/index.scss
@@ -92,6 +92,7 @@
 .book-list-wrap {
   position: relative;
   width: 100%;
+  height: calc(100vh - 280px);
 }
 
 .book-list {
