--- a/miniprogram/src/pages/index/index.scss
+++ b/miniprogram/src/pages/index/index.scss
@@ -109,6 +109,7 @@
 .task-list-wrap {
   position: relative;
   width: 100%;
+  height: calc(100vh - 340px);
 }
 
 .task-list {
